Refactoring specs required more changes

--- a/config/locales/views_controllers/application.sv.yml
+++ b/config/locales/views_controllers/application.sv.yml
@@ -18,9 +18,9 @@ sv:
     menu:
       about: Om
       agenda: Dagordning
-      contact: Kontakt
       documents: Dokument
       info: Information
+      message: Kontakt
       terms: Användarvillkor
       votes: Voteringar
       voting: Röstning
