Adjustment: adds error messages
- Also sends votecodes if needed

--- a/config/locales/views_controllers/attendances.sv.yml
+++ b/config/locales/views_controllers/attendances.sv.yml
@@ -11,3 +11,6 @@ sv:
         manage_users: Hantera användare
         manage_voting: Hantera voteringar
         title: Närvarolista
+      success:
+        attends: "%{user} justerades in."
+        unattends: "%{user} justerades ut."
