--- a/config/locales/models/user.sv.yml
+++ b/config/locales/models/user.sv.yml
@@ -26,8 +26,11 @@ sv:
       card_number_format: Fel format på kortnumret, använd bindestreck mellan, t.ex. 6122-6122-6122-6122
       email_format: Endast epost kopplad till skolan är godkänd, t.ex. tfy15hal@student.lu.se.
       errors:
+        attend_no_item: Användaren kunde inte justeras in då det inte finns en aktuell dagordningspunkt!
         presence: Användare kunde inte justeras in, har eposten bekräftats?
-        'votecode:': Ny röstkod kunde inte ges ut, har användare bekräftat sin epost?
+        unattend_no_item: Användaren kunde inte justeras ut då det inte finns en aktuell dagordningspunkt!
+        unattend_vote_current: Användaren kunde inte justeras ut då det finns en aktuell votering!
+        votecode: Ny röstkod kunde inte ges ut, har användare bekräftat sin epost?
       not_confirmed: Din e-postadress är inte bekräftad.
       password_required_update: Nuvarande lösenord måste fyllas i för att byta lösenord
       roles:
