Users: allow soft-deletion and confirmation resend
- Changes unique index to allow registering with same email after
soft-delete.
- Remove Devise Trackable from users - never used for anything.

--- a/config/locales/views_controllers/users.sv.yml
+++ b/config/locales/views_controllers/users.sv.yml
@@ -2,8 +2,13 @@
 sv:
   admin:
     users:
+      destroy:
+        success: Användaren raderades - men kan återställas från console.
       edit:
         all: Alla användare
+        confirm_destroy: Är du säker på att du vill radera användaren? Användaren kan återställas från console.
+        destroy: Förinta användaren
+        resend_confirmation: Skicka bekräftelse
         title: Redigera användare
       index:
         all: Alla användare
