Mailer: setup layout

--- a/config/locales/defaults/general.sv.yml
+++ b/config/locales/defaults/general.sv.yml
@@ -10,6 +10,8 @@ sv:
   destroy: Förinta
   edit: Redigera
   'no': Nej
+  general:
+    title: Röstsystem
   remove: Ta bort
   sent: Skickat
   show: Visa
