--- a/config/locales/views_controllers/layouts.sv.yml
+++ b/config/locales/views_controllers/layouts.sv.yml
@@ -3,4 +3,4 @@ sv:
   layouts:
     email:
       footer:
-        why_email: Du får detta e-post eftersom du varit inne på Röstsystems webbplats och använt någon av våra tjänster.
+        you_get_this_because: Du får detta e-post eftersom du varit inne och använt någon av våra tjänster.
